--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -114,7 +114,7 @@
                   Doctor Certificate
               </dt>
               <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-                  <div class="font-bold"><%= @contact.doctor_certificate ? "Downloaded" : "Not Downloaded" %></div>
+                  <div class="font-bold"><%= @contact.doctor_certificate ? "Certificate Approved" : "Certificate Not Approved" %></div>
                   <div class="font-bold"><%= @contact.doctor_name %></div>
               </dd>
           </div>
