--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -1,177 +1,169 @@
 <div class="max-w-3xl mx-auto">
-    <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6 shadow rounded-lg">
-        <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-no-wrap">
-            <div class="ml-4 mt-2 flex items-center">
-                <h1 class="text-3xl font-medium text-gray-900 mr-2">
-                    Application <%= @application.id %>
-                </h1>
-                <span class="text-sm bg-gray-300 px-4 py-1 rounded border">
+  <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6 shadow rounded-lg">
+    <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-no-wrap">
+      <div class="ml-4 mt-2 flex items-center">
+        <h1 class="text-3xl font-medium text-gray-900 mr-2">
+          Application <%= @application.id %>
+        </h1>
+        <span class="text-sm bg-gray-300 px-4 py-1 rounded border">
                     <%= link_to 'Edit', edit_application_path(@application) %>
                 </span>
-            </div>
-            <div class="ml-4 mt-2 flex-shrink-0">
+      </div>
+      <div class="ml-4 mt-2 flex-shrink-0">
                 <span class="inline-flex rounded-md shadow-sm">
                     <span class="bg-orange-200 text-orange-700 px-4 py-1 rounded border border-orange-700">
                         Pending
                     </span>
                 </span>
-            </div>
-        </div>
-
-        <div class="mt-8 max-w-xl mx-auto">
-            <%= simple_form_for @application, defaults: { input_html: { class: 'form-input input-text mt-1 font-sans', readonly: true }, wrapper_html: { class: 'flex flex-col my-4 max-w-xl mx-auto' }, label_html: { class: 'label' } } do |f| %>
-            <%= f.error_notification %>
-            <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-            <%= f.input :full_name %>
-            <%= f.input :address %>
-            <%= f.input :phone %>
-            <%= f.input :aadhar %>
-            <%= f.input :quaratine_is_over, input_html: {class: 'form-checkbox'} %>
-            <%= f.input :when_quarantine_over %>
-            <%= f.input :date_of_medical_exam %>
-            <%= f.input :disease_remarks %>
-            <%= f.input :route %>
-            <%= f.input :purpose_of_trip %>
-            <%= f.input :total_persons %>
-            <% end %>
-        </div>
-        <div class="mt-4 flex">
-            <div class="py-6 px-4 text-3xl font-bold">
-                1
-            </div>
-            <div class="bg-white shadow overflow-hidden sm:rounded-md w-full">
-                <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6 rounded-t-lg">
-                    <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-no-wrap">
-                        <div class="ml-4 mt-2">
-                            <h1 class="text-3xl font-medium text-gray-900">
-                                Add Traveller Details
-                            </h1>
-                            <div>
-                                You can enter the details of people travelling along with you.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <ul>
-                    <% @application.contacts.map do |c| %>
-                    <li class="border-t border-gray-200">
-                        <%= link_to application_contact_path(@application, c), class: "block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out" do %>
-                        <div class="flex items-center px-4 py-4 sm:px-6">
-                            <div class="min-w-0 flex-1 flex items-center">
-                                <div class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4">
-                                    <div>
-                                        <div class="text-sm leading-5 font-medium text-indigo-600 truncate"><%= c.name.titleize %></div>
-                                        <div class="mt-2 flex items-center text-sm leading-5 text-gray-500">
-                                            <span class="truncate"><%= c.phone %></span>
-                                        </div>
-                                    </div>
-                                    <div class="hidden md:block">
-                                        <div>
-                                            <div class="text-sm leading-5 text-gray-900">
-                                                Applied on
-                                                <%= c.created_at.strftime("%m/%d/%Y at %I:%M%p") %>
-                                            </div>
-                                            <div class="mt-2 flex items-center text-sm leading-5 text-gray-500">
-
-                                                <i class="fas fa-check-circle text-green-500 mr-1"></i>
-                                                Completed
-
-                                                <!--                            <i class="fas fa-times-circle text-red-500 mr-1"></i>-->
-                                                <!--                            Please Fill up the health details-->
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div>
-                                <svg class="h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20">
-                                    <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-                                </svg>
-                            </div>
-                        </div>
-                        <% end %>
-                    </li>
-                    <% end %>
-                    <li class="border-t border-gray-200">
-                        <%= link_to new_application_contact_path(@application), class: "block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out" do %>
-                        <div class="flex items-center px-4 py-4 sm:px-6">
-                            <div class="min-w-0 flex-1 flex items-center">
-                                <div class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4">
-                                    + Add a new passenger
-                                </div>
-                            </div>
-                            <div>
-                                <svg class="h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20">
-                                    <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-                                </svg>
-                            </div>
-                        </div>
-                        <% end %>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="mt-4 flex">
-            <div class="py-6 px-4 text-3xl font-bold">
-                3
-            </div>
-            <div class="bg-white shadow overflow-hidden sm:rounded-md w-full">
-                <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6 rounded-t-lg">
-                    <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-no-wrap">
-                        <div class="ml-4 mt-2">
-                            <h1 class="text-3xl font-medium text-gray-900">
-                                Enter Vehicle Details
-                            </h1>
-                            <div>
-                                You will only be allowed to travel with vehicle pass issued by us on mainland Kerala
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <ul>
-                    <% @application.vehicles.each do |vehicle| %>
-                    <li class="border-t border-gray-200">
-                        <%= link_to edit_application_vehicle_path(@application, vehicle), class: "block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out" do %>
-                        <div href="#" class="block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out">
-                            <div class="flex items-center px-4 py-4 sm:px-6">
-                                <div class="min-w-0 flex-1 flex items-center">
-                                    <div class="min-w-0 flex-1 px-4 md:grid md:grid-cols-3 md:gap-2">
-                                        <div>
-                                            <div class="text-sm leading-5 font-medium text-indigo-600 truncate"><%= vehicle.number_plate %></div>
-                                        </div>
-
-                                        <div>
-                                            <div class="text-sm leading-5 text-gray-900">
-                                                <%= vehicle.seats&.titleize %> seater
-                                            </div>
-                                        </div>
-                                        <div class="flex mx-auto">
-                                            <div class="text-sm flex px-4 bg-orange-200 rounded-lg items-center py-1 font-semibold">
-                                                <sapn>Edit</sapn>
-                                                <i class="fas fa-pencil-alt ml-2"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <% end %>
-                        <% end %>
-                    <li class="border-t border-gray-200">
-                        <%= link_to new_application_vehicle_path(@application), class: "block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out" do %>
-
-                        <div class="flex items-center px-4 py-4 sm:px-6">
-                            <div class="min-w-0 flex-1 flex items-center">
-                                <div class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4">
-                                    + Add new vehicle
-                                </div>
-                            </div>
-                        </div>
-                        <% end %>
-                    </li>
-                </ul>
-            </div>
-        </div>
+      </div>
     </div>
+
+    <%= render 'details', application: @application %>
+  </div>
+  <div class="mt-4 flex">
+    <div class="py-6 px-4 text-3xl font-bold">
+      1
+    </div>
+    <div class="bg-white shadow overflow-hidden sm:rounded-md w-full">
+      <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6 rounded-t-lg">
+        <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-no-wrap">
+          <div class="ml-4 mt-2">
+            <h1 class="text-3xl font-medium text-gray-900">
+              Add Traveller Details
+            </h1>
+            <div>
+              You can enter the details of people travelling along with you.
+            </div>
+          </div>
+        </div>
+      </div>
+      <ul>
+        <% @application.contacts.map do |c| %>
+          <li class="border-t border-gray-200">
+            <%= link_to application_contact_path(@application, c), class: "block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out" do %>
+              <div class="flex items-center px-4 py-4 sm:px-6">
+                <div class="min-w-0 flex-1 flex items-center">
+                  <div class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4">
+                    <div>
+                      <div class="text-sm leading-5 font-medium text-indigo-600 truncate"><%= c.name.titleize %></div>
+                      <div class="mt-2 flex items-center text-sm leading-5 text-gray-500">
+                        <span class="truncate"><%= c.phone %></span>
+                      </div>
+                    </div>
+                    <div>
+                      <div>
+                        <div class="text-sm leading-5 text-gray-900">
+                          <%= c.gender.to_s.capitalize() %>, <%= c.age %> years old
+                        </div>
+                        <div class="mt-2 flex items-center text-sm leading-5 text-gray-500">
+                          <div>
+                            Aarogya Setu
+                            <% if c.aarogya_setu_downloaded %>
+                              <i class="fas fa-check-circle text-green-500 mx-1"></i>
+                            <% else %>
+                              <i class="fas fa-times-circle text-red-500 mr-1"></i>
+                            <% end %>
+                          </div>
+                          <div>
+                            Doctor certificate
+                            <% if c.doctor_certificate %>
+                              <i class="fas fa-check-circle text-green-500 mx-1"></i>
+                            <% else %>
+                              <i class="fas fa-times-circle text-red-500 mr-1"></i>
+                            <% end %>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div>
+                  <svg class="h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20">
+                    <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
+                  </svg>
+                </div>
+              </div>
+            <% end %>
+          </li>
+        <% end %>
+        <li class="border-t border-gray-200">
+          <%= link_to new_application_contact_path(@application), class: "block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out" do %>
+            <div class="flex items-center px-4 py-4 sm:px-6">
+              <div class="min-w-0 flex-1 flex items-center">
+                <div class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4">
+                  + Add a new passenger
+                </div>
+              </div>
+              <div>
+                <svg class="h-5 w-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20">
+                  <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"/>
+                </svg>
+              </div>
+            </div>
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="mt-4 flex">
+    <div class="py-6 px-4 text-3xl font-bold">
+      2
+    </div>
+    <div class="bg-white shadow overflow-hidden sm:rounded-md w-full">
+      <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6 rounded-t-lg">
+        <div class="-ml-4 -mt-2 flex items-center justify-between flex-wrap sm:flex-no-wrap">
+          <div class="ml-4 mt-2">
+            <h1 class="text-3xl font-medium text-gray-900">
+              Enter Vehicle Details
+            </h1>
+            <div>
+              You will only be allowed to travel with vehicle pass issued by us on mainland Kerala
+            </div>
+          </div>
+        </div>
+      </div>
+      <ul>
+        <% @application.vehicles.each do |vehicle| %>
+          <li class="border-t border-gray-200">
+            <%= link_to edit_application_vehicle_path(@application, vehicle), class: "block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out" do %>
+              <div href="#" class="block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out">
+                <div class="flex items-center px-4 py-4 sm:px-6">
+                  <div class="min-w-0 flex-1 flex items-center">
+                    <div class="min-w-0 flex-1 px-4 md:grid md:grid-cols-3 md:gap-2">
+                      <div>
+                        <div class="text-sm leading-5 font-medium text-indigo-600 truncate"><%= vehicle.number_plate %></div>
+                      </div>
+
+                      <div>
+                        <div class="text-sm leading-5 text-gray-900">
+                          <%= vehicle.seats&.titleize %> seater
+                        </div>
+                      </div>
+                      <div class="flex mx-auto">
+                        <div class="text-sm flex px-4 bg-orange-200 rounded-lg items-center py-1 font-semibold">
+                          <sapn>Edit</sapn>
+                          <i class="fas fa-pencil-alt ml-2"></i>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+        <% end %>
+        <li class="border-t border-gray-200">
+          <%= link_to new_application_vehicle_path(@application), class: "block hover:bg-gray-300 focus:outline-none focus:bg-gray-300 transition duration-150 ease-in-out" do %>
+
+            <div class="flex items-center px-4 py-4 sm:px-6">
+              <div class="min-w-0 flex-1 flex items-center">
+                <div class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4">
+                  + Add new vehicle
+                </div>
+              </div>
+            </div>
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
