Update forms and rename applicaton

--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -117,7 +117,7 @@
               Enter Vehicle Details
             </h1>
             <div>
-              You will only be allowed to travel with vehicle pass issued by us on mainland Kerala
+              You will only be allowed to travel with vehicle pass issued.
             </div>
           </div>
         </div>
@@ -136,7 +136,7 @@
 
                       <div>
                         <div class="text-sm leading-5 text-gray-900">
-                          <%= vehicle.seats&.titleize %> seater
+                          <%= vehicle.name_of_driver %>, <%= vehicle.phone %>
                         </div>
                       </div>
                       <div class="flex mx-auto">
