--- a/app/views/applications/summary.html.erb
+++ b/app/views/applications/summary.html.erb
@@ -85,6 +85,18 @@
           <%= v.number_plate %>
           </span>
         </div>
+        <div class="text-lg">
+          Driver Name:
+          <span class="text-md font-semibold">
+          <%= v.name_of_driver %>
+          </span>
+        </div>
+        <div class="text-lg">
+          Number:
+          <span class="text-md font-semibold">
+          <%= v.phone %>
+          </span>
+        </div>
       </div>
     <% end %>
   </div>
