--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -6,7 +6,7 @@
   <% end %>
   <div class="bg-white shadow overflow-hidden  sm:rounded-lg mt-4">
     <div class="text-5xl font-black mt-4 text-center">
-      Safe Travel Pass
+      Traveller Details
     </div>
     <div class="flex flex-col-reverse md:flex-row">
       <div class="md:w-1/2 px-4">
