--- a/app/views/applications/_details.html.erb
+++ b/app/views/applications/_details.html.erb
@@ -41,18 +41,37 @@
             Quarantine Status
           </dt>
           <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-            <%= application.quaratine_is_over ? 'Ended on' : 'Ends on' %>
+            <%= application.quaratine_is_over ? 'Ended on' : 'false' %>
             <%= application.when_quarantine_over %>
           </dd>
         </div>
         <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
           <dt class="text-sm leading-5 font-medium text-gray-500">
-            Medical Examination
+            Medical Examination/ remarks
           </dt>
           <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
-            on <%= application.date_of_medical_exam %>
+            <% unless application.date_of_medical_exam.blank? %>
+              on <%= application.date_of_medical_exam %>
+            <% end %>
+
             <div>
               <%= application.disease_remarks %>
+            </div>
+          </dd>
+        </div>
+        <div class="mt-8 sm:mt-0 sm:grid sm:grid-cols-3 sm:gap-4 sm:border-t sm:border-gray-200 sm:px-6 sm:py-5">
+          <dt class="text-sm leading-5 font-medium text-gray-500">
+            Destination
+          </dt>
+          <dd class="mt-1 text-sm leading-5 text-gray-900 sm:mt-0 sm:col-span-2">
+            <div>
+              State: <%= application.state %>
+            </div>
+            <div>
+              District: <%= application.district %>
+            </div>
+            <div>
+              Village: <%= application.village %>
             </div>
           </dd>
         </div>
