--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -3,15 +3,20 @@
     <%= f.error_notification %>
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-    <%= f.input :full_name, required: true %>
-    <%= f.input :address, required: true %>
-    <%= f.input :phone, required: true %>
-    <%= f.input :aadhar, required: true %>
+    <%= f.input :full_name, required: true, label: 'Name of the Group Leader' %>
+    <%= f.input :age, required: true, label: 'Age of the Group Leader' %>
+    <%= f.input :address, required: true, label: 'Local Residential Address of Group Leader' %>
+    <%= f.input :phone, required: true, label: 'Mobile Number of Group Leader' %>
+    <%= f.input :aadhar, required: true, label: 'Aadhar number of group leader' %>
+    <%= f.input :police_station, required: true, label: 'Local Police Station' %>
     <%= f.input :quaratine_is_over, collection: [['Yes', true], ['No', false]], as: :radio_buttons, input_html: { class: 'm-2' }, required: true, label: 'Completed quaratine?' %>
     <%= f.input :when_quarantine_over, as: :date, html5: true %>
     <%= f.input :date_of_medical_exam, as: :date, html5: true %>
     <%= f.input :disease_remarks %>
-    <%= f.input :route, required: true %>
+    <%= f.input :state, required: true, label: 'Destination State' %>
+    <%= f.input :district, required: true, label: 'Destination District' %>
+    <%= f.input :village, required: true, label: 'Destination Village/Town' %>
+    <%= f.input :route, required: true, label: 'Add Travel Routes' %>
     <%= f.input :purpose_of_trip, required: true %>
     <%= f.input :total_persons, required: true %>
     <span class="inline-flex rounded-md shadow-sm">
