--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -1,8 +1,10 @@
 <section class="px-6 py-4 mx-auto">
   <%= simple_form_for [@application, @vehicle], defaults: { input_html: { class: 'form-input mt-1' }, wrapper_html: { class: 'flex flex-col my-2 max-w-md' } } do |f| %>
     <div class="">
-      <%= f.input :number_plate, required: true %>
-      <%= f.input :seats, input_html: { class: 'form-select mt-1 block w-ful' }, required: true %>
+      <%= f.input :number_plate, required: true, label: 'Vehicle Number' %>
+      <%= f.input :name_of_driver, required: true, label: 'Name of the Driver' %>
+      <%= f.input :phone, required: true, label: 'Number of the Driver' %>
+      <%= f.input :mode, required: true, label: 'Vehicle Type' %>
       <div class="mt-4">
         <%= f.button :submit, 'Save', class: 'inline-flex items-center px-3 py-3 border border-transparent text-sm leading-4 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition ease-in-out duration-150' %>
       </div>
