--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <html lang='en' data-user-id="<%= current_user&.id %>" data-flash="<%= flash_messages %>" data-env="<%= Rails.env %>">
 
 <head>
-    <title>Corona Point</title>
+    <title>Migrant Point</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta charset="utf-8" />
@@ -30,7 +30,7 @@
             <div class="px-8 lg:px-16 py-4 flex flex-row items-center lg:flex-row justify-between lg:items-center max-w-7xl mx-auto container">
                 <%= link_to root_path do %>
                 <h2 class="text-xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-3xl">
-                    Corona
+                  Migrant
                     <span class="text-indigo-600 -ml-1">Point</span>
                 </h2>
                 <% end %>
