--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -7,7 +7,7 @@
       <div class="mt-10 mx-auto max-w-screen-xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 xl:mt-28">
         <div class="text-center">
           <h2 class="text-4xl tracking-tight leading-10 font-extrabold text-gray-900 sm:text-5xl sm:leading-none md:text-6xl">
-            Welcome to
+            Welcome to Migrant
             <br class="xl:hidden"/>
             <span class="text-indigo-600">Point</span>
           </h2>
